--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*navbar*/
+.nav-link {
+  margin: 20px;
+}
+/*banner*/
+.sansita {
+  font-family: 'Sansita Swashed', cursive;
+}
+.home-banner {
+  height: 700px;
+  background: url('./assets/banner.jpg') no-repeat center/cover;
+}
+/*minibanner*/
+.mini-banner {
+  height: 400px;
+  background: url('./assets/minibanner.jpg') no-repeat center/cover fixed;
+}
+/*footer*/
+.footer-item {
+  list-style: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.flex-footer {
+  display: flex;
+  justify-content: center;
+}
+
+/*about*/
+.about-img {
+  background: url('./assets/about.jpg') center center/cover;
 }
