--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@ html {
 /*navbar*/
 .nav-link {
   margin: 20px;
+}
+.nav-link2 {
+  color: #256381;
+}
+.nav-link2:hover {
   color: #256381;
 }
 /*banner*/
@@ -27,12 +32,6 @@ html {
 /*footer*/
 .footer-item {
   list-style: none;
-}
-.footer-link {
-  color: #256381;
-}
-.footer-link:hover {
-  color: #256381;
 }
 
 .flex-footer {
